--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,18 @@
+body {
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  background-color: #1b1b32;
+  color: #f5f6f7;
+  font-family: Verdana;
+  font-size: 16px;
+  background-image: url(https://www.beverlyhillsvets.com/blog/wp-content/uploads/2022/03/iStock-149052633.jpg);
+
+}
+
+fieldset {
+  background-color: black;
+  opacity: 0.6;
+}
+
 
