--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,21 @@
+h1 {
+  margin: 1em auto;
+  text-align: center;
+  font-size: 46px;
+}
+
+h2 {
+  margin: auto;
+  text-align: center;
+}
+
+p {
+  margin: 1em auto;
+  text-align: center;
+  font-family: Verdana;
+  font-style: italic;
+}
+
 body {
   width: 100%;
   height: 100vh;
@@ -6,13 +24,82 @@ body {
   color: #f5f6f7;
   font-family: Verdana;
   font-size: 16px;
-  background-image: url(https://www.beverlyhillsvets.com/blog/wp-content/uploads/2022/03/iStock-149052633.jpg);
-
+  background-image: url(https://img.goodfon.com/wallpaper/nbig/6/6d/badfon-kot-lapa-makro.webp);
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 }
 
 fieldset {
-  background-color: black;
-  opacity: 0.6;
+  background-color: rgba(0, 0, 0, 0.6);
+  padding: 1em;
+  border-bottom: 3px solid #3b3b4f;
 }
 
+form {
+  align-items: center;
+  width: 60vw;
+  max-width: 500px;
+  min-width: 300px;
+  margin: 0 auto;
+  padding-bottom: 2em;
+}
+
+textarea {
+  width: 90%;
+  padding: 10px;
+  margin-top: 1em;
+  resize: vertical;
+}
+
+label {
+  margin: 0.5rem 0;
+  font-size: 16px;
+  display: block;
+}
+
+label input[type="radio"],
+label input[type="checkbox"] {
+  margin-right: 5px;
+  vertical-align: middle;
+}
+
+input .inline{
+margin: 10px 0 0 0;
+  width: 90%;
+  min-height: 2em;
+}
+
+textarea,
+select {
+  margin: 10px 0 0 0;
+  width: 90%;
+  min-height: 2em;
+  vertical-align: middle;
+}
+
+input,
+textarea {
+  background-color: #150f39;
+  border: 1px solid #150f39;
+  color: #ffffff;
+
+}
+
+  input[type='text'], input[type='email'] {
+    margin: 10px 0 0 0;
+    width: 100%;
+    min-height: 2em;
+  }
+
+button {
+  color: #150f39;
+  display: block;
+  width: 60%;
+  margin: 1em auto;
+  height: 2em;
+  font-size: 1.1rem;
+  background-color: #f5c40f;
+  border-color: #150f39;
+}
 
